force-app/main/default/objects/Grille_Ekwateur__mdt/Grille_Ekwateur__mdt.object-meta.xml
<CustomObject>
    <label>Grille Ekwateur</label>
    <pluralLabel>Grilles Ekwateur</pluralLabel>
</CustomObject>