force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Abonnement_mois__c.field-meta.xml
<CustomField>
    <fullName>Abonnement_mois__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Abonnement (€/mois)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>