force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Annee_fourniture__c.field-meta.xml
<CustomField>
    <fullName>Annee_fourniture__c</fullName>
    <label>Année fourniture</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>