force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Date_debut_max1__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_max1__c</fullName>
    <label>Date début maximale 1</label>
    <type>Date</type>
</CustomField>