force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Date_debut_max2__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_max2__c</fullName>
    <label>Date début maximale 2</label>
    <type>Date</type>
</CustomField>