force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Date_debut_min2__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_min2__c</fullName>
    <label>Date debut minimale 2</label>
    <type>Date</type>
</CustomField>