force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Date_fin__c.field-meta.xml
<CustomField>
    <fullName>Date_fin__c</fullName>
    <label>Date fin</label>
    <type>Date</type>
</CustomField>