force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Marge_Ekwateur__c.field-meta.xml
<CustomField>
    <fullName>Marge_Ekwateur__c</fullName>
    <label>Marge Ekwateur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>