force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Prix_Base_EP__c.field-meta.xml
<CustomField>
    <fullName>Prix_Base_EP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix Base EP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>