force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Prix_HC__c.field-meta.xml
<CustomField>
    <fullName>Prix_HC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HC</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>