force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Prix_HPE__c.field-meta.xml
<CustomField>
    <fullName>Prix_HPE__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix HPE</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>