force-app/main/default/objects/Grille_Ekwateur__mdt/fields/Prix_molecule_P011__c.field-meta.xml
<CustomField>
    <fullName>Prix_molecule_P011__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix molecule P011</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>